--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": "17.x"
   },
   "scripts": {
+    "build": "tsc",
     "start": "ts-node src/index.ts",
     "dev": "ts-node-dev --respawn src/."
   },
