--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "17.x"
   },
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "node dist/.",
     "dev": "ts-node-dev --respawn src/."
   },
   "keywords": [],
