--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "author": "David",
   "license": "ISC",
   "dependencies": {
-    "@typegoose/typegoose": "^9.12.1",
-    "discord.js": "^14.8.0",
+    "@notionhq/client": "^2.2.10",
+    "@typegoose/typegoose": "^11.4.1",
+    "discord.js": "^14.12.1",
     "dotenv": "^16.0.3",
-    "mongoose": "^6.6.4",
+    "mongoose": "^7.4.3",
     "ms": "^2.1.3",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.6"
   }
 }
