--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "node dist/.",
-    "dev": "ts-node-dev --respawn src/."
+    "dev": "ts-node-dev --respawn src"
   },
   "keywords": [],
   "author": "David",
@@ -16,11 +16,11 @@
     "discord.js": "^14.13.0",
     "dotenv": "^16.0.3",
     "mongoose": "^7.4.3",
-    "ms": "^2.1.3",
-    "ts-node": "^10.9.1"
+    "ms": "^2.1.3"
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
