--- a/package.json
+++ b/package.json
@@ -5,23 +5,22 @@
   "main": "src/index.ts",
   "type": "commonjs",
   "scripts": {
-    "start": "node dist/.",
-    "dev": "ts-node-dev --respawn src"
+    "start": "node dist",
+    "start:ts": "ts-node src",
+    "dev": "ts-node-dev src"
   },
   "keywords": [],
   "author": "David",
   "license": "ISC",
   "dependencies": {
     "@typegoose/typegoose": "^11.4.1",
-    "discord.js": "^14.13.0",
-    "dotenv": "^16.0.3",
-    "mongoose": "^7.4.3",
-    "ms": "^2.1.3"
+    "discord.js": "^14.12.1",
+    "dotenv": "^16.4.5",
+    "mongoose": "^7.4.3"
   },
   "devDependencies": {
-    "@types/ms": "^0.7.31",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.4.5"
   }
 }
